--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 <link rel="stylesheet" href="style.css">
 <script src="script.js" defer></script>
 <body>
+<div class="container">
 
+    
+</div>
 
 </body>
 </html>
