--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 <script src="script.js" defer></script>
 <body>
 <div class="container">
-
+<div class="DisplayBar"></div>
+<div class="Section1"></div>
+<div class="Section2"></div>
+<div class="Section3"></div>
+<div class="Section4"></div>
+<div class="Section5"></div>
     
 </div>
 
