--- a/index.html
+++ b/index.html
@@ -8,11 +8,34 @@
 <body>
 <div class="container">
 <div class="DisplayBar"></div>
-<div class="Section1"></div>
-<div class="Section2"></div>
-<div class="Section3"></div>
-<div class="Section4"></div>
-<div class="Section5"></div>
+<div class="Section1">
+<button>C</button>
+<button>X</button>
+<button>+</button>
+<button><img src="backspace.png"></button>
+</div>
+<div class="Section2">
+<button>1</button>
+<button>2</button>
+<button>3</button>
+<button>+</button>
+</div>
+<div class="Section3">
+<button>4</button>
+<button>5</button>
+<button>6</button>
+<button>-</button>
+</div>
+<div class="Section4">
+<button>7</button>
+<button>8</button>
+<button>9</button>
+<button>=</button>
+</div>
+<div class="Section5">
+<button>0</button>
+<button>.</button>
+</div>
     
 </div>
 
