--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
 <div class="DisplayBar"></div>
 <div class="Section1">
 <button class="clear">C</button>
-<button class="symbol">X</button>
-<button class="symbol">÷</button>
-<button><img src="backspace.png"></button>
+<button class="symbolX">X</button>
+<button class="symbol÷">÷</button>
+<button class="backspace"><img src="backspace.png"></button>
 </div>
 <div class="Section2">
-<button>1</button>
-<button>2</button>
-<button>3</button>
-<button class="symbol">+</button>
+<button class="btn1">1</button>
+<button class="btn2">2</button>
+<button class="btn3">3</button>
+<button class="symbol+">+</button>
 </div>
 <div class="Section3">
-<button>4</button>
-<button>5</button>
-<button>6</button>
-<button class="symbol">-</button>
+<button class="btn4">4</button>
+<button class="btn5">5</button>
+<button class="btn6">6</button>
+<button class="symbol-">-</button>
 </div>
 <div class="Section4">
-<button>7</button>
-<button>8</button>
-<button>9</button>
-<button style="color: rgb(7, 125, 14);">=</button>
+<button class="btn7">7</button>
+<button class="btn8">8</button>
+<button class="btn9">9</button>
+<button class = "equal"style="color: rgb(7, 125, 14);">=</button>
 </div>
 <div class="Section5">
-<button>0</button>
-<button>.</button>
+<button class="btn0">0</button>
+<button class="decimal">.</button>
 </div>
     
 </div>
