--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <button class="btn1">1</button>
 <button class="btn2">2</button>
 <button class="btn3">3</button>
-<button class="symbol+">+</button>
+<button class="addition">+</button>
 </div>
 <div class="Section3">
 <button class="btn4">4</button>
